2011-11-15  Per Bothner  <per@bothner.com>

	* std_syntax.scm (eval): New method.   Compile with full-tailcalls.

2011-10-08  Charles Turner  <chturne@gmail.com>

	* ports.scm (write, write-with-shared-structure): write was
	modified slightly for SRFI-38, write-w-s-s is a new procedure that
	calls the appropiate Java methods for shared structure printing.

2011-06-14  Per Bothner  <per@bothner.com>

	* misc.scm: Update package for class Promise.
	* std_syntax.scm: Likewise.

2011-04-10  Per Bothner  <per@bothner.com>

	* rnrs/hashtables.scm (make-hashtable): Fix order of parameters
	to match R6RS.

2011-04-03  Per Bothner  <per@bothner.com>

	* misc_syntax.scm (provide): Use quasisyntax abbreviation.

	* strings.scm (list->string): Minor cleanups.

2011-02-06  Per Bothner  <per@bothner.com>

	* syntax.scm (try-finally, synchronized): Fix error in last change.

2011-02-04  Per Bothner  <per@bothner.com>

	* prim_syntax.scm (if): Change to use define-rewrite-syntax.  This
	defers expansion and hence name lookup until the rewrite phase.
	(try-catch): Likewise.
	* syntax.scm (try-finally, synchronized): Likewise.

2011-01-24  Jamison Hope <jrh@theptrgroup.com>

	* rnrs/lists.scm: Added the (rnrs lists (6)) library.
	* Makefile.am: Update accordingly.

2011-01-17  Jamison Hope <jrh@theptrgroup.com>

	* kawa/hashtable.scm: Fix various small bugs.
	* rnrs/hashtables.scm: Likewise.

2011-01-13  Jamison Hope <jrh@theptrgroup.com>

	* srfi95.scm (%sort-vector): Fix return type.

2010-12-27  Per Bothner  <per@bothner.com>

	* numbers.scm (real-valued?, rational-valued?, integer-valued?): New.

2010-12-27  Jamison Hope <jrh@theptrgroup.com>

	* vectors.scm (vector-map, vector-for-each): New procedures.
	* numbers.scm (finite?, infinite?, nan?, exact-integer-sqrt): Likewise.

2010-11-25  Jamison Hope <jrh@theptrgroup.com>

	* lists.scm (assoc): Order of operands to test predicate was
	inconsistent with that specified in SRFI-1.

2010-11-04  Per Bothner  <per@bothner.com>
